[package]
name = "asset_lru"
version = "0.0.2"
description = "A two-level cache for objects which are bigger in memory than on disk"
authors = ["Austin Hicks <ahicks@ahicks.io>"]
edition = "2018"
license = "BSL-1.0"
readme = "README.md"
repository = "https://github.com/ahicks92/asset_lru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
derive_builder = "0.10.2"
relative-path = "1.5.0"
thiserror = "1.0.30"

[dev-dependencies]
lru = "0.7.0"
proptest = "1.0.0"
tempfile = "3.2.0"
